<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_medium"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/title_jp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="Title" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_large"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_jp"
                tools:src="@android:drawable/sym_def_app_icon" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                tools:text="Description" />

            <LinearLayout
                android:id="@+id/titles"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description">

                <TextView
                    android:id="@+id/release_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/genres_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/author_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold"
                    tools:text="@string/author" />

                <TextView
                    android:id="@+id/score_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/values"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/titles"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/titles"
                app:layout_constraintTop_toTopOf="@id/titles">

                <TextView
                    android:id="@+id/release_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="01.01.2018-01.01.2019 (Finished)" />

                <TextView
                    android:id="@+id/rating_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="R - 17+ (violence &amp; profanity)" />

                <TextView
                    android:id="@+id/genres_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="Action, Adventure, Comedy, Drama, ..." />

                <TextView
                    android:id="@+id/author_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="Alice A." />

                <TextView
                    android:id="@+id/score_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="8.72" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/layout_empty" />

    <include layout="@layout/layout_progress" />

</FrameLayout>